--- a/src/app/evaluation/evaluation.component.html
+++ b/src/app/evaluation/evaluation.component.html
@@ -6,9 +6,13 @@
         <ag-grid-angular 
     style="width: 100%; height: 200px;" 
     class="ag-theme-alpine"
-    [rowData]= "rowData" 
-    [columnDefs]="columnDefs">
+    [rowData]= "selectedRows" 
+    [columnDefs]="columnDefs"
+    (gridReady)="onGridReady($event)">
 </ag-grid-angular>
 
     </div>
+    <span>
+        {{selectedRows}}  
+    </span>
 </div>
