--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,7 @@
+<nav-item></nav-item>
+<br>
+<menubar-layout></menubar-layout>
+<br>
 <a routerLink="/first">Kritika Screen 1</a>
 <br>
 <a routerLink="/second">Kritika Screen 2</a>
