--- a/src/app/menubar/menubar.component.html
+++ b/src/app/menubar/menubar.component.html
@@ -1,1 +1,25 @@
-<p>menubar works!</p>
+
+    <ul class="navbar-nav">
+     <ng-container  *ngFor="let menu of menus">  
+        
+         <div *ngIf="!menu.children || (menu.children && menu.children.length === 0)">
+            <li class="nav-item">
+                <a class="nav-link" href="#">{{menu.name}}</a>
+            </li>
+        </div>
+            <div *ngIf="(menu.children && menu.children.length > 0)">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" 
+                aria-haspopup="true" aria-expanded="false">{{menu.name}}</a>
+                <ul class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
+                    <li  class="dropdown-item dropdown-submenu">
+                        <menubar  [menus]="menu.children"></menubar>
+                    </li>
+                  
+                </ul>
+            </li>
+        </div>          
+    </ng-container>
+</ul>
+ 
+    
