--- a/src/app/stemplate/stemplate.component.html
+++ b/src/app/stemplate/stemplate.component.html
@@ -1,6 +1,13 @@
 <div class="card card-default">
     <div class="card-header">Evaluation Component Details Only Internal Component</div>
     <div class="card-body">
-        
+        <ag-grid-angular 
+        style="width: 100%; height: 200px;" 
+        class="ag-theme-alpine"
+        [rowData]= "rowData" 
+        [columnDefs]="columnDefs"
+        (gridReady)="onGridReady($event)">
+    </ag-grid-angular>
+    
     </div>
 </div>
